--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: map
 Type: Package
 Title: Creating datasets
 Version: 0.0.1
-Author: Gabriel Burcea, Global Digital Health Unit, Public Health, Imperial College
+Author: Gabriel Burcea
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
